--- a/template.html
+++ b/template.html
@@ -32,7 +32,7 @@
     <title>Trang chủ</title>
   </head>
   <header>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-black custom-header">
+    <nav class="navbar navbar-expand-lg bg-black custom-header">
       <a class="navbar-brand" href="#"
         ><img
           class="logo-header"
@@ -55,7 +55,7 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarNavDropdown">
         <ul class="navbar-nav ml-auto">
-          <li class="nav-item">
+          <li class="nav-item active-menu">
             <a class="nav-link" href="#">Services</a>
           </li>
           <li class="nav-item">
@@ -127,6 +127,13 @@
       </div>
     </div>
   </footer>
+  <div class="leadia-science-wallet">
+    <a href="#">
+      <img src="./img/profile.png" alt="" />
+      <p class="no-mr"><b>John</b></p>
+      <p class="no-mr">I will help you with promotion</p>
+    </a>
+  </div>
   <body>
     <script
       src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
