--- a/services-2.html
+++ b/services-2.html
@@ -29,7 +29,7 @@
       media="all and (max-width:767px)"
     />
     <link rel="shortcut icon" type="image/png" href="./favicon.png" />
-    <title>Trang chủ</title>
+    <title>services-2</title>
   </head>
   <header>
     <nav class="navbar navbar-expand-lg navbar-dark bg-black custom-header">
@@ -118,7 +118,7 @@
             <p>■ Telegram.</p><p>&nbsp;</p>
             <p>We have vast experience in creating and promoting effective Bounty campaigns. Please contact us to discuss your project!</p>
     </div>
-    <div class="mb-5 mt-5 text-center">
+    <div class="button-services  text-center">
         <a class="btn-services-2" href="">
             <i class="fab fa-telegram-plane"></i> Contact Us </a>
     </div>
