upload contacts and insert modal partnership

--- a/contacts.html
+++ b/contacts.html
@@ -61,12 +61,47 @@
         </div>
         <div class="title-contacts">Our Contacts</div>
     </div>
-    <div class="container">
-        <div class="container-content-contacts-1">
-
+    <div class="container wrap-content-contacts mb-5">
+        <div class="container-content-contacts-1 mt-5">
+            <p>We are always on the lookout for exciting new projects.</p>
+            <p>If you work in a crypto space and plan a campaign or just want to help manage your communities</p>
+            <div class="button-contacts mt-5 mb-5">
+                <a href="#" class="element-button-contacts-container">
+                    <span class="element-button-contacts-container-inner">
+                        <span><i class="fab fa-telegram-plane"></i></span>
+                        <span>JOIN US</span>
+                    </span>
+                </a>
+            </div>
         </div>
-        <div class="container-content-contacts-1">
-            
+        <div class="container-content-contacts-2">
+            <div class="container-content-contacts-child">
+                <form method="POST" class="form-contacts">
+                    <div class="element-form-contacts">
+                        <label class="element-field-label">YOUR NAME</label>
+                        <input class="element-field" placeholder="E.g. John Doe ..."/>
+                    </div>
+                    <div class="element-form-contacts">
+                        <label class="element-field-label">YOUR EMAIL</label>
+                        <input class="element-field" placeholder="Write your best Email ..."/>
+                    </div>
+                    <div class="element-form-contacts">
+                        <label class="element-field-label">YOUR TELEGRAM NICK</label>
+                        <input class="element-field" placeholder="Nick name"/>
+                    </div>
+                    <div class="element-form-contacts">
+                        <label class="element-field-label">YOUR COMPANY</label>
+                        <input class="element-field" placeholder="What's your Company? ..."/>
+                    </div>
+                    <div class="element-form-contacts">
+                        <label class="element-field-label">YOUR MESSAGE</label>
+                        <textarea class="element-field" rows="4" placeholder="Let's talk about it ..."></textarea>
+                    </div>
+                    <div class="button-contacts-group mt-3 mb-3">
+                        <button class="button-contacts-request"><i class="fas fa-caret-square-right"></i> SEND US A REQUEST</button>
+                    </div>
+                </form>
+            </div>
         </div>
     </div>
     <!--scripts loaded here-->
