--- a/services-2.html
+++ b/services-2.html
@@ -1,189 +1,159 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link
-      rel="stylesheet"
-      href="https://use.fontawesome.com/releases/v5.8.2/css/all.css"
-    />
-    <link
-      rel="stylesheet"
-      href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-      integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
-      crossorigin="anonymous"
-    />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
-      rel="stylesheet"
-    />
-    <link rel="stylesheet" href="./css/pc.css" media="all" />
-    <link
-      rel="stylesheet"
-      href="./css/tablet.css"
-      media="all and (max-width:1023px) and (min-width:768px)"
-    />
-    <link
-      rel="stylesheet"
-      href="./css/mobile.css"
-      media="all and (max-width:767px)"
-    />
-    <link rel="shortcut icon" type="image/png" href="./favicon.png" />
-    <title>services-2</title>
-  </head>
-  <header>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-black custom-header">
-      <a class="navbar-brand" href="#"
-        ><img
-          class="logo-header"
-          src="./img/лого-1.png"
-          class="img-fluid"
-          alt=""
-      /></a>
-      <button
-        class="navbar-toggler"
-        type="button"
-        data-toggle="collapse"
-        data-target="#navbarNavDropdown"
-        aria-controls="navbarNavDropdown"
-        aria-expanded="false"
-        aria-label="Toggle navigation"
-      >
-        <span class="navbar-toggler-icon">
-          <i class="fas fa-bars" style="color: #fff; font-size: 28px"></i>
-        </span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarNavDropdown">
-        <ul class="navbar-nav ml-auto">
-          <li class="nav-item">
-            <a class="nav-link" href="#">Services</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Project</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Team</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Partnership</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Feedbacks</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Blog</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Contacts</a>
-          </li>
-        </ul>
-        <a class="ml-5" href="#"><span>RU</span></a>
-        <a class="mr-5" href="#"><span>EN</span></a>
-      </div>
-    </nav>
-  </header>
-  <section>
-    <div class="container mb-3">
-        <div class="elementor-services">
-           <span><a href="">Home</a>>><a href="">Services</a>>><a href="">Home</a>>>Services</span>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" />
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+    integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous" />
+  <link
+    href="https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+    rel="stylesheet" />
+  <link rel="stylesheet" href="./css/pc.css" media="all" />
+  <link rel="stylesheet" href="./css/tablet.css" media="all and (max-width:1023px) and (min-width:768px)" />
+  <link rel="stylesheet" href="./css/mobile.css" media="all and (max-width:767px)" />
+  <link rel="shortcut icon" type="image/png" href="./favicon.png" />
+  <title>services-2</title>
+</head>
+<header>
+  <nav class="navbar navbar-expand-lg navbar-dark bg-black custom-header">
+    <a class="navbar-brand"  href="./vitor-services.html"><img class="logo-header" src="./img/лого-1.png" class="img-fluid" alt="" /></a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
+      aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon">
+        <i class="fas fa-bars" style="color: #fff; font-size: 28px"></i>
+      </span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNavDropdown">
+      <ul class="navbar-nav ml-auto">
+        <li class="nav-item active-menu">
+          <a class="nav-link" href="./services.html">Services</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="./projects.html">Project</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="./team.html">Team</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="./partnership.html">Partnership</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="./feedbacks.html">Feedbacks</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="./blog.html">Blog</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="./contacts.html">Contacts</a>
+        </li>
+      </ul>
+      <a class="ml-5" href="#"><span>RU</span></a>
+      <a class="mr-5" href="#"><span>EN</span></a>
+    </div>
+  </nav>
+</header>
+<section>
+  <div class="container mb-3">
+    <div class="elementor-services">
+      <span><a href="">Home</a>>><a href="">Services</a>>><a href="">Home</a>>>Services</span>
+    </div>
+  </div>
+  <div class="container services-2">
+    <h2>Development of Bounty Campaigns</h2>
+    <p>Vitor Services specializes in launching professional development of
+      bounty campaigns that help maximize the dissemination of information
+      about your project. The purpose of the bounty program is to achieve the maximum mention of your project
+      in a variety of resources and increase the recognition of the project among the crypto community.
+    </p>
+    <p>
+      The Bounty program creation and <a href="">amanagement service </a> include:
+    </p>
+    <p>■ Creating the structure and rules of the bounty campaign;</p>
+    <p>■ Advertising Bounty campaigns for 5K-7K Bounty hunters;</p>
+    <p>■ Design and theme creation for the bounty program at Bitcointalk.org;</p>
+    <p>■ Moderation and management of Bounty until the end of the company;</p>
+    <p>■ Creation of signatures for the Bitcointalk signatures campaign;</p>
+    <p>■ Creation of registration forms;</p>
+    <p>■ Support/answers to questions in a separate Telegram chat for bounty hunters;</p>
+    <p>■ Verification of completed tasks and calculation of rewards;</p>
+    <p>■ Checking member accounts for fake or bot subscribers;</p>
+    <p>■ Screening of participants who improperly perform tasks;</p>
+    <p>&nbsp;</p>
+    <p>What will be included in the bounty program:</p>
+    <p>■ BitcoinTalk subscription company (+ signature design for all ranks on the forum);</p>
+    <p>■ Transfers;</p>
+    <p>■ Social networks (Facebook, Twitter);</p>
+    <p>■ Additional social networks (Instagram, Linkedin);</p>
+    <p>■ Youtube campaign;</p>
+    <p>■ Articles, blog entries;</p>
+    <p>■ Reddit;</p>
+    <p>■ <a href="https://medium.com/@vitor_services">Medium</a>;</p>
+    <p>■ Telegram.</p>
+    <p>&nbsp;</p>
+    <p>We have vast experience in creating and promoting effective Bounty campaigns. Please contact us to discuss your
+      project!</p>
+  </div>
+  <div class="button-services  text-center">
+    <a class="btn-services-2" href="">
+      <i class="fab fa-telegram-plane"></i> Contact Us </a>
+  </div>
+</section>
+<footer>
+  <div class="container-fluid mt-4 bg-footer">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-4 mt-4 d-flex flex-column custom-footer">
+          <h5>COMPANY</h5>
+          <a class="nav-item" href="#">Home</a>
+          <a class="nav-item" href="#">Partnership</a>
+          <a class="nav-item" href="#">Projects</a>
+          <a class="nav-item" href="#">Team</a>
+          <a class="nav-item" href="#">Blog</a>
         </div>
-    </div>
-    <div class="container services-2">
-        <h2>Development of Bounty Campaigns</h2>
-        <p>Vitor Services specializes in launching professional development of 
-            bounty campaigns that help maximize the dissemination of information 
-            about your project. The purpose of the bounty program is to achieve the maximum mention of your project 
-            in a variety of resources and increase the recognition of the project among the crypto community.
-        </p>
-        <p>
-            The Bounty program creation and <a href="">amanagement service </a> include: 
-        </p>         
-            <p>■ Creating the structure and rules of the bounty campaign;</p>
-            <p>■ Advertising Bounty campaigns for 5K-7K Bounty hunters;</p>
-            <p>■ Design and theme creation for the bounty program at Bitcointalk.org;</p>
-            <p>■ Moderation and management of Bounty until the end of the company;</p>
-            <p>■ Creation of signatures for the Bitcointalk signatures campaign;</p>
-            <p>■ Creation of registration forms;</p>
-            <p>■ Support/answers to questions in a separate Telegram chat for bounty hunters;</p>
-            <p>■ Verification of completed tasks and calculation of rewards;</p>
-            <p>■ Checking member accounts for fake or bot subscribers;</p>
-            <p>■ Screening of participants who improperly perform tasks;</p>
-            <p>&nbsp;</p><p>What will be included in the bounty program:</p>
-            <p>■ BitcoinTalk subscription company (+ signature design for all ranks on the forum);</p>
-            <p>■ Transfers;</p><p>■ Social networks (Facebook, Twitter);</p>
-            <p>■ Additional social networks (Instagram, Linkedin);</p>
-            <p>■ Youtube campaign;</p><p>■ Articles, blog entries;</p>
-            <p>■ Reddit;</p>
-            <p>■ <a href="https://medium.com/@vitor_services">Medium</a>;</p>
-            <p>■ Telegram.</p><p>&nbsp;</p>
-            <p>We have vast experience in creating and promoting effective Bounty campaigns. Please contact us to discuss your project!</p>
-    </div>
-    <div class="button-services  text-center">
-        <a class="btn-services-2" href="">
-            <i class="fab fa-telegram-plane"></i> Contact Us </a>
-    </div>
-  </section>
-  <footer>
-    <div class="container-fluid mt-4 bg-footer">
-      <div class="container">
-        <div class="row">
-          <div class="col-md-4 mt-4 d-flex flex-column custom-footer">
-            <h5>COMPANY</h5>
-            <a class="nav-item" href="#">Home</a>
-            <a class="nav-item" href="#">Partnership</a>
-            <a class="nav-item" href="#">Projects</a>
-            <a class="nav-item" href="#">Team</a>
-            <a class="nav-item" href="#">Blog</a>
-          </div>
-          <div class="col-md-4 mt-4 d-flex flex-column custom-footer">
-            <h5>SERVICES</h5>
-            <a class="nav-item" href="#">Community Growth & Management</a>
-            <a class="nav-item" href="#">Regional Marketing</a>
-            <a class="nav-item" href="#">PR & Catalogs & Traffic</a>
-            <a class="nav-item" href="#">Investor Relations</a>
-          </div>
-          <div class="col-md-4 mt-4 custom-footer text-center custom-social">
-            <h5>SOCIAL NETWORKS</h5>
-            <a class="nav-item" href="#"
-              ><i class="fab fa-telegram-plane"></i
-            ></a>
-            <a class="nav-item" href="#"><i class="fab fa-linkedin"></i></a>
-            <a class="nav-item" href="#"><i class="fab fa-facebook"></i></a>
-            <a class="nav-item" href="#"><i class="fas fa-envelope"></i></a>
-            <a class="nav-item" href="#"><i class="fab fa-medium"></i></a>
-            <h5>OUR OFFICIAL WALLETS</h5>
-            <a class="nav-item" href="#"
-              ><i class="fas fa-heart"></i>
-              <p>Ethereum Wallet</p></a
-            >
-          </div>
+        <div class="col-md-4 mt-4 d-flex flex-column custom-footer">
+          <h5>SERVICES</h5>
+          <a class="nav-item" href="#">Community Growth & Management</a>
+          <a class="nav-item" href="#">Regional Marketing</a>
+          <a class="nav-item" href="#">PR & Catalogs & Traffic</a>
+          <a class="nav-item" href="#">Investor Relations</a>
         </div>
-      </div>
-      <div class="footer-under bg-brown">
-        <div class="row">
-          <div class="col-md-12 bg-brown">
-            <h3>Copyright © 2020 Gunnerskma Team. All rights reserved.</h3>
-          </div>
+        <div class="col-md-4 mt-4 custom-footer text-center custom-social">
+          <h5>SOCIAL NETWORKS</h5>
+          <a class="nav-item" href="#"><i class="fab fa-telegram-plane"></i></a>
+          <a class="nav-item" href="#"><i class="fab fa-linkedin"></i></a>
+          <a class="nav-item" href="#"><i class="fab fa-facebook"></i></a>
+          <a class="nav-item" href="#"><i class="fas fa-envelope"></i></a>
+          <a class="nav-item" href="#"><i class="fab fa-medium"></i></a>
+          <h5>OUR OFFICIAL WALLETS</h5>
+          <a class="nav-item" href="#"><i class="fas fa-heart"></i>
+            <p>Ethereum Wallet</p>
+          </a>
         </div>
       </div>
     </div>
-  </footer>
-  <body>
-    <script
-      src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-      integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
-      integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
-      integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
-      crossorigin="anonymous"
-    ></script>
-    <script src="./js/script.js"></script>
-  </body>
+    <div class="footer-under bg-brown">
+      <div class="row">
+        <div class="col-md-12 bg-brown">
+          <h3>Copyright © 2020 Gunnerskma Team. All rights reserved.</h3>
+        </div>
+      </div>
+    </div>
+  </div>
+</footer>
+
+<body>
+  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+    integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+    crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+    integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+    crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+    integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+    crossorigin="anonymous"></script>
+  <script src="./js/script.js"></script>
+</body>
+
 </html>
