--- a/template.html
+++ b/template.html
@@ -33,7 +33,7 @@
   </head>
   <header>
     <nav class="navbar navbar-expand-lg bg-black custom-header">
-      <a class="navbar-brand" href="#"
+      <a class="navbar-brand"  href="./vitor-services.html"
         ><img
           class="logo-header"
           src="./img/лого-1.png"
