--- a/vitor-services.html
+++ b/vitor-services.html
@@ -18,7 +18,7 @@
 </head>
 <header>
   <nav class="navbar navbar-expand-lg bg-black custom-header">
-    <a class="navbar-brand" href="#"><img class="logo-header" src="./img/лого-1.png" class="img-fluid" alt="" /></a>
+    <a class="navbar-brand" href="./vitor-services.html"><img class="logo-header" src="./img/лого-1.png" class="img-fluid" alt="" /></a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
       aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon">
@@ -28,25 +28,25 @@
     <div class="collapse navbar-collapse" id="navbarNavDropdown">
       <ul class="navbar-nav ml-auto">
         <li class="nav-item active-menu">
-          <a class="nav-link" href="#">Services</a>
+          <a class="nav-link" href="./services.html">Services</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Project</a>
+          <a class="nav-link" href="./projects.html">Project</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Team</a>
+          <a class="nav-link" href="./team.html">Team</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Partnership</a>
+          <a class="nav-link" href="./partnership.html">Partnership</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Feedbacks</a>
+          <a class="nav-link" href="./feedbacks.html">Feedbacks</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Blog</a>
+          <a class="nav-link" href="./blog.html">Blog</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Contacts</a>
+          <a class="nav-link" href="./contacts.html">Contacts</a>
         </li>
       </ul>
       <a class="ml-5" href="#"><span>RU</span></a>
@@ -87,27 +87,27 @@
       </div>
       <div class="card-victor-services">
         <div class="text-center">
-          <img src="img/Victor-services/2.png" alt="">
-          <p><strong>$960+</strong>Millions raised</p>
+          <img src="img/Victor-services/3.png" alt="">
+          <p><strong>$200+</strong> Projects</p>
         </div>
       </div>
 
       <div class="card-victor-services">
         <div class="text-center">
-          <img src="img/Victor-services/2.png" alt="">
-          <p><strong>$960+</strong>Millions raised</p>
+          <img src="img/Victor-services/4.png" alt="">
+          <p><strong>$25+</strong>Marketing Services</p>
         </div>
       </div>
       <div class="card-victor-services">
         <div class="text-center">
-          <img src="img/Victor-services/2.png" alt="">
-          <p><strong>$960+</strong>Millions raised</p>
+          <img src="img/Victor-services/5.png" alt="">
+          <p><strong>TOP 5</strong>ICOHolder Agency</p>
         </div>
       </div>
       <div class="card-victor-services">
         <div class="text-center">
-          <img src="img/Victor-services/2.png" alt="">
-          <p><strong>$960+</strong>Millions raised</p>
+          <img src="img/Victor-services/6.png" alt="">
+          <p><strong>3+</strong>years of experience</p>
         </div>
       </div>
     </div>
