--- a/services-1.html
+++ b/services-1.html
@@ -18,7 +18,7 @@
 </head>
 <header>
   <nav class="navbar navbar-expand-lg navbar-dark bg-black custom-header">
-    <a class="navbar-brand" href="#"><img class="logo-header" src="./img/лого-1.png" class="img-fluid" alt="" /></a>
+    <a class="navbar-brand"  href="./vitor-services.html"><img class="logo-header" src="./img/лого-1.png" class="img-fluid" alt="" /></a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
       aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon">
@@ -27,26 +27,26 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarNavDropdown">
       <ul class="navbar-nav ml-auto">
-        <li class="nav-item">
-          <a class="nav-link" href="#">Services</a>
+        <li class="nav-item active-menu">
+          <a class="nav-link" href="./services.html">Services</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Project</a>
+          <a class="nav-link" href="./projects.html">Project</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Team</a>
+          <a class="nav-link" href="./team.html">Team</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Partnership</a>
+          <a class="nav-link" href="./partnership.html">Partnership</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Feedbacks</a>
+          <a class="nav-link" href="./feedbacks.html">Feedbacks</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Blog</a>
+          <a class="nav-link" href="./blog.html">Blog</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Contacts</a>
+          <a class="nav-link" href="./contacts.html">Contacts</a>
         </li>
       </ul>
       <a class="ml-5" href="#"><span>RU</span></a>
@@ -67,7 +67,7 @@
           <img src="img/services/1.svg" class="rounded" alt="...">
         </div>
         <h5>Development of Bounty Campaigns</h5>
-        <a href=""> More info </a>
+        <a href="./services-2.html"> More info </a>
       </div>
     </div>
     <div class="container-box-services-1">
